--- a/apps/merchant-app/package.json
+++ b/apps/merchant-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@repo/ui": "*",
     "next": "^14.1.1",
+    "next-auth": "^4.24.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -22,7 +23,10 @@
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.3.3"
   }
 }
