--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,7 +5,11 @@
   "exports": {
     "./button": "./src/button.tsx",
     "./card": "./src/card.tsx",
-    "./code": "./src/code.tsx"
+    "./code": "./src/code.tsx",
+    "./appbar": "./src/appbar.tsx",
+    "./center": "./src/center.tsx",
+    "./select": "./src/select.tsx",
+    "./textinput": "./src/textinput"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
@@ -15,8 +19,8 @@
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "@turbo/gen": "^1.12.4",
-    "@types/node": "^20.11.24",
     "@types/eslint": "^8.56.5",
+    "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "eslint": "^8.57.0",
