--- a/apps/webhook/package.json
+++ b/apps/webhook/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js && node dist/index "
+    "dev": "tsc -b && node dist/index "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@repo/db": "*",
+    "@repo/db": "^1.0.0",
     "@types/express": "^4.17.21",
     "esbuild": "^0.20.2",
     "express": "^4.19.2"
