--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,26 +1,16 @@
 {
   "name": "@repo/db",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type":"module",
-  
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "prisma": "^5.12.1"
-  },
+  "version": "0.0.0",
   "dependencies": {
-    "@prisma/client": "^5.12.1"
+      "@prisma/client": "^5.11.0"
+  },
+  "devDependencies": {
+      "prisma": "5.11.0"
   },
   "exports": {
-    "./client": "./index.ts"
+      "./client": "./index.ts"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+      "seed": "ts-node prisma/seed.ts"
   }
 }
